--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: 'Avenir Next Cyr Thin';
+  src : url('/ofont.ru_Avenir Next.ttf') format('truetype');
 }
+@layer base {
+  html {
+    font-family: 'Avenir Next Cyr Thin', sans-serif;
+    background-color: #FEFCF4;
+  }
+  .container {
+    @apply xl:max-w-[1440px] mx-auto ;
+  }
+  .gilroy{
+    font-family: 'Gilroy', sans-serif;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
